# cgcl

./: .gitignore  CMakeLists.txt
assets/shader/simple/: frag.glsl
include/cgcl/math/: BasicFunction.h
include/cgcl/mesh/: Mesh.h  PhongMaterial.h  SkyBoxMesh.h  SkyBoxTexture.h  Texture.h  TriMesh.h
include/cgcl/platform/OpenGL/: GLShader.h
include/cgcl/surface/: Bezier.h  WavefrontOBJ.h
include/cgcl/utils/: Loader.h  config.h.in  logging.h
lib/: CMakeLists.txt
lib/mesh/: Mesh.cpp  PhongMaterial.cpp  SkyBoxMesh.cpp  SkyBoxTexture.cpp  Texture.cpp  TriMesh.cpp
lib/platform/OpenGL/: GLShader.cpp
lib/surface/: Bezier.cpp  WavefrontOBJ.cpp
lib/utils/: Loader.cpp
src/test/: CMakeLists.txt  OBJParser.cpp
src/test/SolarSystem/: CMakeLists.txt  body.cpp  body.h  main.cpp  shader.cpp  shader.h
src/test/SolorSystem/: CMakeLists.txt  body.h  car.txt  main.cpp
